--- a/index.html
+++ b/index.html
@@ -1,94 +1,113 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
 
-<script>
-function findGetParameter(parameterName) {
-    var result = null,
-        tmp = [];
-    location.search
-        .substr(1)
-        .split("&")
-        .forEach(function (item) {
-          tmp = item.split("=");
-          if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
-        });
-    return result;
-}
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<title>Guía Patrimonial La Laguna</title>
+	<script>
+		function findGetParameter(parameterName) {
+			var result = null,
+				tmp = [];
+			location.search
+				.substr(1)
+				.split("&")
+				.forEach(function (item) {
+					tmp = item.split("=");
+					if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
+				});
+			return result;
+		}
 
-var map = [
-"",
-'1. INTRODUCCIÓN.mp3',
-'2. CIUDAD PATRIMONIO DE LA HUMANIDAD.mp3',
-'3. PRIMERA PARTE. 1. ORIGEN Y EVOLUCIÓN DE LA CIUDAD.mp3',
-'4. PRIMERA PARTE. 2. LA CREACIÓN DE LA CIUDAD.mp3',
-'5. PRIMERA PARTE. 3. LA REGRESIÓN URBANA DE LA CIUDAD.mp3',
-'6. SEGUNDA PARTE. 4. LAS EVIDENCIAS GUANCHES DE AGUERE.mp3',
-'7. SEGUNDA PARTE. 5. EL TRAZADO DE LA CIUDAD. PLAZAS Y ESPACIOS URBANOS.mp3',
-'8. SEGUNDA PARTE. 5.1. La plaza del Adelantado.mp3',
-'9. SEGUNDA PARTE. 5.2. Plaza de la Concepción.mp3',
-'10. SEGUNDA PARTE. 5.3. Plaza de los Remedios.mp3',
-'11. SEGUNDA PARTE. 5.4. Otras plazas.mp3',
-'12. SEGUNDA PARTE. 6. UNA ARQUITECTURA EN CONSTANTE TRANSFORMACIÓN.mp3',
-'13. SEGUNDA PARTE. 6.1. Convento de San Agustín.mp3',
-'14. SEGUNDA PARTE. 6.2. Hospital de los Dolores.mp3',
-'15. SEGUNDA PARTE. 6.3. Convento de Santo Domingo.mp3',
-'16. SEGUNDA PARTE. 6.4. Convento de Santa Clara.mp3',
-'17. SEGUNDA PARTE. 6.5. Casa Lercaro.mp3',
-'18. SEGUNDA PARTE. 6.6. Casa de Nava.mp3',
-'19. SEGUNDA PARTE. 6.7. Ayuntamiento y Casa del Corregidor.mp3',
-'20. SEGUNDA PARTE. 6.8. Casa Alvarado-Bracamonte o de los Capitanes.mp3',
-'21. SEGUNDA PARTE. 7. INTERVENCIONES ARQUEOLÓGICAS EN LA CIUDAD.mp3',
-'22. SEGUNDA PARTE. 7.1. Ermita de San Benito Abad.mp3',
-'23. SEGUNDA PARTE. 7.2. Convento de San Agustín.mp3',
-'24. SEGUNDA PARTE. 7.3. Ermita de San Miguel Arcángel.mp3',
-'25. SEGUNDA PARTE. 7.4. Casa de Lercaro.mp3',
-'26. SEGUNDA PARTE. 7.5. Capilla de San Bartolomé de la Iglesia de La Concepción.mp3',
-'27. SEGUNDA PARTE. 7.6. Lateral de la Plaza de Los Remedios.mp3',
-'28. SEGUNDA PARTE. 8. EVIDENCIAS AISLADAS DEL PATRIMONIO ARQUEOLÓGICO.mp3'
-];
+		var map = [
+			"",
+			'1. INTRODUCCIÓN.mp3',
+			'2. CIUDAD PATRIMONIO DE LA HUMANIDAD.mp3',
+			'3. PRIMERA PARTE. 1. ORIGEN Y EVOLUCIÓN DE LA CIUDAD.mp3',
+			'4. PRIMERA PARTE. 2. LA CREACIÓN DE LA CIUDAD.mp3',
+			'5. PRIMERA PARTE. 3. LA REGRESIÓN URBANA DE LA CIUDAD.mp3',
+			'6. SEGUNDA PARTE. 4. LAS EVIDENCIAS GUANCHES DE AGUERE.mp3',
+			'7. SEGUNDA PARTE. 5. EL TRAZADO DE LA CIUDAD. PLAZAS Y ESPACIOS URBANOS.mp3',
+			'8. SEGUNDA PARTE. 5.1. La plaza del Adelantado.mp3',
+			'9. SEGUNDA PARTE. 5.2. Plaza de la Concepción.mp3',
+			'10. SEGUNDA PARTE. 5.3. Plaza de los Remedios.mp3',
+			'11. SEGUNDA PARTE. 5.4. Otras plazas.mp3',
+			'12. SEGUNDA PARTE. 6. UNA ARQUITECTURA EN CONSTANTE TRANSFORMACIÓN.mp3',
+			'13. SEGUNDA PARTE. 6.1. Convento de San Agustín.mp3',
+			'14. SEGUNDA PARTE. 6.2. Hospital de los Dolores.mp3',
+			'15. SEGUNDA PARTE. 6.3. Convento de Santo Domingo.mp3',
+			'16. SEGUNDA PARTE. 6.4. Convento de Santa Clara.mp3',
+			'17. SEGUNDA PARTE. 6.5. Casa Lercaro.mp3',
+			'18. SEGUNDA PARTE. 6.6. Casa de Nava.mp3',
+			'19. SEGUNDA PARTE. 6.7. Ayuntamiento y Casa del Corregidor.mp3',
+			'20. SEGUNDA PARTE. 6.8. Casa Alvarado-Bracamonte o de los Capitanes.mp3',
+			'21. SEGUNDA PARTE. 7. INTERVENCIONES ARQUEOLÓGICAS EN LA CIUDAD.mp3',
+			'22. SEGUNDA PARTE. 7.1. Ermita de San Benito Abad.mp3',
+			'23. SEGUNDA PARTE. 7.2. Convento de San Agustín.mp3',
+			'24. SEGUNDA PARTE. 7.3. Ermita de San Miguel Arcángel.mp3',
+			'25. SEGUNDA PARTE. 7.4. Casa de Lercaro.mp3',
+			'26. SEGUNDA PARTE. 7.5. Capilla de San Bartolomé de la Iglesia de La Concepción.mp3',
+			'27. SEGUNDA PARTE. 7.6. Lateral de la Plaza de Los Remedios.mp3',
+			'28. SEGUNDA PARTE. 8. EVIDENCIAS AISLADAS DEL PATRIMONIO ARQUEOLÓGICO.mp3'
+		];
 
-if (findGetParameter('i') != null) {
-	window.location.href="https://guia-patrimonial-la-laguna.netlify.app/mp3/" + map[+findGetParameter('i')];
-}
+		if (findGetParameter('i') != null) {
+			window.location.href = "https://guia-patrimonial-la-laguna.netlify.app/mp3/" + map[+findGetParameter('i')];
+		}
+	</script>
+	<style>
+		html {
+			overflow-y: scroll;
+		}
 
-</script>
-<style>
-	html {
-		overflow-y: scroll;
-	}
-	* {
-		font-family: sans-serif;
-	}
-	h1 {
-		margin: 10vh 30px 40px 30px;
-		text-align: center;
-	}
-	.center {
-		width: 90%;
-		max-width: 400px;
-		margin: 0 auto;
-		padding-bottom: 5vh;
-	}
-	details {
-		margin-bottom: 20px;
-	}
-	summary {
-		font-size: 2rem;
-		cursor: pointer;
-		text-align: center;
-	}
-	li {
-		margin: 0 0 5px 0;
-	}
-</style>
-<h1>Guía Patrimonial La Laguna</h1>
-<div class="center">
-	  <ul id="es">
-	  </ul>
-</div>
-<script>
-	let es = "";
-	for (let i = 1; i < map.length; i++) {
-		es += "<li><a href='https://guia-patrimonial-la-laguna.netlify.app/mp3/" + map[i] + "'>" + map[i].slice(0, -4) + "</a></li>";
-	}
-	document.getElementById('es').innerHTML = es;
-</script>
+		* {
+			font-family: sans-serif;
+		}
+
+		h1 {
+			margin: 10vh 30px 40px 30px;
+			text-align: center;
+		}
+
+		.center {
+			width: 90%;
+			max-width: 400px;
+			margin: 0 auto;
+			padding-bottom: 5vh;
+		}
+
+		ul {
+			list-style: none;
+			padding: 0;
+		}
+
+		li {
+			padding: 6px 10px 5px 10px;
+			background-color: #d4e9ef;
+		}
+
+		li a {
+			text-decoration: none;
+		}
+
+		li:nth-child(odd) {
+			background-color: #bed0d7;
+		}
+	</style>
+</head>
+
+<body>
+	<h1>Guía Patrimonial La Laguna</h1>
+	<div class="center">
+		<ul id="es">
+		</ul>
+	</div>
+	<script>
+		let es = "";
+		for (let i = 1; i < map.length; i++) {
+			es += "<li><a href='https://guia-patrimonial-la-laguna.netlify.app/mp3/" + map[i] + "'>" + map[i].slice(0, -4) + "</a></li>";
+		}
+		document.getElementById('es').innerHTML = es;
+	</script>
+</body>
+
+</html>
